# glowdiary

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
.pi/: instructions.md
scripts/: bump-version.sh
src/: error.rs  fddb.rs  main.rs  off.rs
src/db/: goals.rs  meals.rs  mod.rs  users.rs
src/tools/: mod.rs
