[package]
name = "glowdiary"
version = "0.3.0"
edition = "2021"
description = "A food diary MCP server with meal tracking, nutrition stats, and Open Food Facts integration"

[dependencies]
# MCP framework
rmcp = { version = "0.16", features = ["server", "macros", "transport-io", "schemars"] }
tokio = { version = "1", features = ["full"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP (sync client for Open Food Facts)
ureq = "2"

# IDs and dates
uuid = { version = "1", features = ["v7"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
